--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,7 @@ jobs:
           node-version: 24
       - run: 'npm install'
       - run: './node_modules/.bin/sauerkraut build'
+      - run: 'cp ./content/favicon.ico ./build'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
